Fixed work-content on mobile

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -4,8 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-freelancer/blob/master/LICENSE)
  */
 body {
-  font-family: 'Lato';
-  overflow-x: hidden; }
+  font-family: 'Lato'; }
 
 h1,
 h2,
@@ -282,6 +281,9 @@ a {
   a:focus, a:hover, a:active {
     color: #5182ac; }
 
+.row {
+  margin-right: 0px !important; }
+
 .btn {
   border-width: 2px; }
 
@@ -338,6 +340,30 @@ a {
     .project .work-content .text-content {
       padding-top: 40px;
       padding-right: 50px; }
+  @media (max-width: 992px) {
+    .project {
+      height: 500px !important; }
+      .project .work-content {
+        position: relative; }
+        .project .work-content .text-content {
+          padding-top: 0px;
+          padding-right: 0px;
+          position: absolute;
+          top: 50px;
+          margin: auto;
+          left: 0;
+          right: 0;
+          text-align: center; }
+        .project .work-content img {
+          position: absolute;
+          top: 125px;
+          margin: auto;
+          left: 0;
+          right: 0; }
+        .project .work-content h2, .project .work-content p {
+          width: 80%;
+          margin: auto;
+          text-align: center; } }
 
 #header {
   background: url("https://images.pexels.com/photos/114979/pexels-photo-114979.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb");
