--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -8,6 +8,10 @@ a {
   }
 }
 
+.row{
+  margin-right: 0px !important;
+}
+
 .btn {
   border-width: 2px;
 }
