--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -35,4 +35,36 @@
                         padding-right: 50px;
                 }
         }
+        @media (max-width: 992px) {
+                height: 500px !important;
+                .work-content{
+                        position: relative;
+                        .text-content{
+                                padding-top: 0px;
+                                padding-right: 0px;
+                                position: absolute;
+                                top: 50px;
+                                margin: auto;
+                                left: 0;
+                                right: 0;
+                                text-align: center;
+                        }
+                        img{
+                                position: absolute;
+                                top: 125px;
+                                margin: auto;
+                                left: 0;
+                                right: 0;
+                                
+                        }
+                        h2, p{
+                                width: 80%;
+                                margin: auto;
+                                text-align: center;
+                        }
+                }
+               
+
+              }
 }
+
